--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <img src="https://images.scribblelive.com/2020/3/25/6e510a6f-4666-451b-8c96-311faedcbc27.gif" alt="Centered Image">
+    <img src="bepisie.zapto.org/giphy.gif" alt="Centered Image">
     
     <div id="current-time"></div>
 
