--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <img src="bepisie.zapto.org/giphy.gif" alt="Centered Image">
+    <img src="giphy.gif" alt="Centered Image">
     
     <div id="current-time"></div>
 
